# gentok

./: .gitignore  main.py  pyproject.toml  pytest.ini  requirements.txt  settings.py
app/cli/: cli.py  get_handlers.py  validate.py  validation.json
app/scraper/: __init__.py  scraper.py
app/templates/: proceso_2024.py
app/utils/: __init__.py  conversor.py  files.py  logging_setup.py
app/xpaths/: xpaths_2024.py
docs/: Xpaths.txt
tests/test_e2e_scraper/: test_e2e_scraper.py
tests/tests_e2e_scraper/: test_e2e_scraper.py
tests/tests_scraper/: test_scraper.py
tests/tests_utils/: test_conversor.py  test_files.py
