    [build-system]
    requires = ["setuptools>=64.0", "wheel"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "radex" 
    version = "0.1.0"
    description = "" 
    dependencies = [
        "click >= 8.1.7",
        "selenium >= 4.0.0",
        "pytest >= 7.0.0",
        "beautifulsoup4 >= 4.10.0",  # Aquí se añadió beautifulsoup4
    ]

    [project.scripts]
    radex = "app.cli.cli:cli"  # Ajusta esto según el nombre de tu comando y la ubicación del archivo

    [tool.setuptools.packages]
    find = { include = ["app"] }
